--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-     "start": "serve -s build",
+    "start": "serve -s dist"
+,
 "build": "vite build",
 
     "dev": "vite",
